fixed double scrollbar, downscale+compressed imgs

--- a/src/css/AboutMePage.css
+++ b/src/css/AboutMePage.css
@@ -25,8 +25,7 @@
   justify-content: center;
   min-width: 90vw;
   min-height: 100vh;
-  overflow: scroll;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .aboutMeContent {
